dropshot/tests/fail/bad_server_channel17.stderr
error[E0277]: the trait bound `dropshot::WebsocketConnection: SharedExtractor` is not satisfied
  --> tests/fail/bad_server_channel17.rs:15:5
   |
15 |     #[channel {
   |     ^ the trait `SharedExtractor` is not implemented for `dropshot::WebsocketConnection`
   |
   = help: the following other types implement trait `SharedExtractor`:
             dropshot::Path<PathType>
             dropshot::Query<QueryType>
   = note: required for `(dropshot::WebsocketConnection, WebsocketUpgrade)` to implement `dropshot::extractor::common::RequestExtractor`
note: required by a bound in `ApiEndpoint::<StubContext>::new_stub`
  --> src/api_description.rs
   |
   |     pub fn new_stub<FuncParams, ResultType>(
   |            -------- required by a bound in this associated function
...
   |         FuncParams: RequestExtractor + 'static,
   |                     ^^^^^^^^^^^^^^^^ required by this bound in `ApiEndpoint::<StubContext>::new_stub`

error[E0277]: the trait bound `fn(dropshot::RequestContext<<ServerImpl as MyServer>::Context>, dropshot::WebsocketConnection, WebsocketUpgrade) -> impl Future<Output = Result<http::response::Response<hyper::body::body::Body>, HttpError>> {two_websocket_channels_adapter::<ServerImpl>}: dropshot::handler::HttpHandlerFunc<_, _, _>` is not satisfied
  --> tests/fail/bad_server_channel17.rs:15:5
   |
10 |   #[dropshot::server]
   |   ------------------- required by a bound introduced by this call
...
15 | /     #[channel {
16 | |         protocol = WEBSOCKETS,
17 | |         path = "/test",
18 | |     }]
19 | |     async fn two_websocket_channels(
   | |_________^ the trait `dropshot::handler::HttpHandlerFunc<_, _, _>` is not implemented for fn item `fn(RequestContext<<ServerImpl as MyServer>::Context>, ..., ...) -> ... {two_websocket_channels_adapter::<...>}`
   |
note: required by a bound in `ApiEndpoint::<Context>::new`
  --> src/api_description.rs
   |
   |     pub fn new<HandlerType, FuncParams, ResponseType>(
   |            --- required by a bound in this associated function
...
   |         HandlerType: HttpHandlerFunc<Context, FuncParams, ResponseType>,
   |                      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `ApiEndpoint::<Context>::new`
